# zero-to-production

./: .env  Cargo.toml  configuration.yaml
.github/workflows/: general.yml
scripts/: init_db.sh  test.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
