[package]
name = "zero_to_production"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero_to_production"

[dependencies]
actix-web = "4"
reqwest = "0.11.18"
serde = { version = "1.0.164", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
